# python-gm-plotting

./: GM_plotting.ipynb  README.md  example.py  example_gps_coords.json  gps logger.py  pyproject.toml  setup.cfg
data/: campus.csv  campus2.csv  campusA.csv  campus_move.csv  campus_move_raw.csv  campusstop.csv  circle.csv  correct_test.csv  cycle2.csv  cycleback.csv  cycleback2.csv  cyclelane.csv  cyclewalknew.csv  cyclewalknew_raw.csv  debug test.txt  debug test1.txt  jeff.csv  new_better.csv  new_better_software.csv  southcampus.csv
gm_plotting/: __init__.py  api_client.py  coords.py  test_coords.py
src/gm_plotting/: api_client.py
