[tool.poetry]
name = "gm_plotting"
version = "0.1.0"
description = "Tools for overlaying plots on Google Maps"
authors = ["Alex Dewar <a.dewar@imperial.ac.uk>"]
license = "GPL-2.0-only"
repository = "https://github.com/BrainsOnBoard/python-gm-plotting"

[tool.poetry.dependencies]
python = "^3.9"
appdirs = "^1.4.4"
googlemaps = "^4.6.0"
numpy = "^1.23.0"
Pillow = "^9.1.1"
utm = {version = "^0.7.0", optional = true}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
