[metadata]
name = gm_plotting
version = 0.1.0
author = Alex Dewar
author_email = a.dewar@sussex.ac.uk
description = Tools for overlaying plots on Google Maps
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/BrainsOnBoard/python-gm-plotting
project_urls =
    Bug Tracker = https://github.com/BrainsOnBoard/python-gm-plotting/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GPLv2
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
